<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/lLPadding"
    tools:context=".NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/lLPadding">

        <Button
            android:id="@+id/hipHop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_hip_hop"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/rB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_r_b"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/reggae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_reggae"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_country"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vPadding"
        android:text="@string/song_is_now_playing"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtSize" />

    <TextView
        android:id="@+id/artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vPadding"
        android:text="@string/artist"
        android:textSize="@dimen/txtSize" />

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/vPadding"
        android:text="@string/song"
        android:textSize="@dimen/txtSize" />


</LinearLayout>
