<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/vPadding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/vPadding"
        android:text="@string/user_selects_a_song"
        android:textColor="@android:color/black"
        android:textSize="@dimen/txtSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btHipHop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_hip_hop" />

        <Button
            android:id="@+id/btRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_r_b" />

        <Button
            android:id="@+id/btReggae"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_reggae" />

        <Button
            android:id="@+id/btCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/vPadding"
            android:text="@string/genre_country" />
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/lLPadding" />
</LinearLayout>
